--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   firebase_auth: ^5.4.0
   go_router: ^14.6.3
   cloud_firestore: ^5.6.1
+  firebase_messaging: ^15.2.1
+  flutter_local_notifications: ^18.0.1
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
