--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   pdf: ^3.11.3
   printing: ^5.14.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -37,8 +38,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
 
