--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   pdf: ^3.11.3
   printing: ^5.14.2
   uuid: ^4.5.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
