--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,32 @@
+// buildscript {
+//     ext.kotlin_version = '1.7.10'
+//     repositories {
+//         google()
+//         mavenCentral()
+//     }
+//     dependencies {
+//         classpath 'com.android.tools.build:gradle:8.1.0'
+//         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//         classpath 'com.google.gms:google-services:4.4.2'
+//     }
+// }
+
+// allprojects {
+//     repositories {
+//         google()
+//         mavenCentral()
+//     }
+// }
+
+// rootProject.buildDir = "../build"
+
+// tasks.register("clean", Delete) {
+//     delete rootProject.buildDir
+// }
+
 plugins {
-    id 'com.google.gms.google-services' version '4.4.2' apply false
+  id 'com.google.gms.google-services' version '4.4.2' apply false
+
 }
 allprojects {
     repositories {
