--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   printing: ^5.14.2
   uuid: ^4.5.1
   shared_preferences: ^2.5.2
+  fl_chart: ^0.70.2
+  excel: ^2.0.16
+  file_saver: ^0.2.14
 
 dev_dependencies:
   flutter_test:
